--- a/readme
+++ b/readme
@@ -2,7 +2,7 @@
 
 create_latlon.ncl : create latlon information file latlon.nc 
 
-interp.ncl : sample model data at given lat/lon 
+sample.ncl : sample model data at given lat/lon 
              all variables in the history file will be sampled at given locations 
 
              the output variables will have dimensions like [time, station_index] or [time, lev, station_index] 
